review: die Befunde am Ode-Vertrag abtragen
Erster Review dieses Repos. Neun Befunde, zwei davon oeffnen statt zu
schliessen:

- Die Inbound-Wache fiel offen aus, wenn der Pfad "" oder "/" ist:
  normalisedPath() lieferte "/", daraus wurden die Muster "/" und "//**",
  die keinen der weiter gemappten Endpunkte treffen. Root normalisiert
  jetzt auf "" und die Wache baut daraus "/**".
- Quellen-Fehler wurden als 400 bad_request beantwortet. Der Leser kuehlt
  bei 400 nicht ab, eine tote Quelle wurde also weiter gehaemmert. Eigene
  Ablehnungen tragen jetzt OdeBadRequestException und bleiben 400, alles
  andere ist 500 source_failed.

Dazu:

- Map.copyOf auf untrusted JSON (expertParams, facets, extras, attributes)
  warf NPE auf null-Werten und antwortete mit der Message "null" — genau
  was OdeErrorResponse ausschliesst. Neuer Helfer OdeCopy laesst nulls fallen.
- max-results/max-limit von 0 legte den Endpunkt lahm; 0 heisst jetzt
  "nicht gesetzt", nicht "nichts ausliefern".
- /facets ignorierte parent bei nicht-lazy Facetten und gab den flachen
  Baum zurueck. OdeFacets.childrenOf liefert eine Ebene.
- OdeFacets.normalize versprach "order kept", gab aber Map.copyOf zurueck.
- sizeBytes kam aus String.length() (UTF-16-Chars statt Bytes).
- URLEncoder fuer Pfad-Segmente: ein Leerzeichen wurde "+" und das Brain
  las es woertlich.
- README: /facets fehlte in beiden Endpoint-Tabellen, die ganze Facetten-
  Funktion und die Inbound-Fehlercodes waren nicht dokumentiert.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>